# stockfin

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix  shell.nix
resources/: style.css
src/: dbus.rs  main.rs  persistence.rs  stock_api.rs  stock_manager.rs  stock_object.rs
