[package]
name = "stockfin"
version = "0.1.0"
edition = "2024"

[dependencies]
yahoo_finance_api = "4.1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.149"
directories = "6.0.0"
zbus = "5.13.1"
atomic_float = "1.1.0"

[dependencies.gtk]
package = "gtk4"
version = "0.10.3"
features = ["v4_2"]
